cluster/applications/matrix/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
  namespace: matrix
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
  hostnames:
    - "matrix.maio-tech.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/login
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/v1/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v1/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v1/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/login
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/refresh
      timeouts:
        request: 300s
        backendRequest: 300s
      backendRefs:
        - name: matrix-mas
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 0s
        backendRequest: 300s
      backendRefs:
        - name: matrix
          port: 8008
