cluster/applications/matrix/mas-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-mas
  namespace: matrix
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
  hostnames:
    - "mas.maio-tech.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
        backendRequest: 300s
      backendRefs:
        - name: matrix-mas
          port: 8080
