cluster/applications/matrix/rtc-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-rtc
  namespace: matrix
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
  hostnames:
    - "rtc.maio-tech.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /livekit/jwt
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: matrix-rtc-jwt
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /livekit/sfu
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      timeouts:
        request: 0s
        backendRequest: 0s
      backendRefs:
        - name: matrix-rtc-livekit
          port: 7880
